--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "fetch-intercept": "^2.3.1",
     "history": "latest",
     "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
