--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fetch-intercept": "^2.3.1",
     "history": "latest",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
